# cc-trace

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  gemini-myactivity-format.md
src/cc_trace/: __init__.py  cli.py  config.py  parser.py  scheduler.py  sync.py  transformer.py
src/cc_trace/distill/: __init__.py  aggregator.py  delta.py  formatter.py  models.py  ollama_client.py  prompt.py  sync.py
src/cc_trace/gemini/: __init__.py  crawler.py  matcher.py  sync.py  takeout_parser.py  transformer.py
tests/: test_parser.py  test_sync.py  test_transformer.py
tests/distill/: test_aggregator.py  test_delta.py  test_formatter.py  test_models.py  test_ollama_client.py  test_prompt.py  test_sync.py
tests/gemini/: __init__.py  test_matcher.py  test_sync.py  test_takeout_parser.py  test_transformer.py
