[project]
name = "cc-trace"
version = "0.1.0"
description = "Extract Claude Code session logs into Obsidian Markdown"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cc-trace = "cc_trace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_trace"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
